[package]
name = "walking-skeleton"
version = "0.1.0"
authors = ["Jason Duffy <jasonsduffy@gmail.com>"]
edition = "2018"

[lib]
name = "game"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [
    "dsound",
    "handleapi",
    "impl-default",
    "libloaderapi",
    "memoryapi",
    "profileapi",
    "synchapi",
    "timeapi",
    "winuser",
    "winerror",
    "xinput",
] }
