[package]
name = "walking-skeleton"
version = "0.1.0"
authors = ["Jason Duffy <jasonsduffy@gmail.com>"]
edition = "2018"

[lib]
name = "game"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
rand = "0.7.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [
    "dsound",
    "errhandlingapi",
    "handleapi",
    "impl-default",
    "libloaderapi",
    "memoryapi",
    "profileapi",
    "synchapi",
    "timeapi",
    "winuser",
    "winerror",
    "xinput",
] }
